--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,8 +12,8 @@ stdout_callback             = yaml
 log_path                = ~/ansible.log
 inventory               = ./provision/ansible/inventory
 library                 = /usr/share/my_modules
-remote_tmp              = /tmp/.ansible/tmp
-local_tmp               = /tmp/.ansible/tmp
+remote_tmp              = /tmp
+local_tmp               = /tmp
 roles_path              = ./provision/ansible/roles
 retry_files_enabled     = False
 
