--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:M8qj1X0MNVugqRntqpc=,iv:DEqahUrI8szoA8UbBoJRWpMsLGszPnTCE9zCh0U3fb4=,tag:O3GwstU7GjiyLhcCqV0zlg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:w0yvPiMMDAH0RVDguMA/RtRGUGOLdyDS0GY=,iv:7V5OikuA5WKZSa/BaGJQnA78QooTcEqVN3LZIQM6Jys=,tag:77BRDRmy2SFSlmvQSEqCKw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:ROGWIdiKI23t3ncEnLM=,iv:9/Mrr1jNT8UbUeZG8ZAtZFvXxxYfe2u5HGW7MnR0KjM=,tag:6MLumS8x9otn92I1+CXXOA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:mvtv1w6hVVBFpxaREvZWox7ZKk0sqlrfm5c=,iv:mWbHigvWhADo1CijCtiQ9Uahq+rpTTO3yZr4VIOP1h4=,tag:aRu/K6YtySX4OUWeSQVzag==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1j9nkequ7a7k26n0gvj0j6pm4my9wehxxw8adfwq36yyf267fsffs57shza
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4SE1zR1B1eE04bFQrM1RV
-            YXIvZk9teWJCRVFqcVBmSFBhMzFCdEZwc0M0Ck1OcFg0Yk1zL0xJejlQUVhRMkov
-            d0ZFQUxZOGtwejg5Tk01V2pGd05tNXcKLS0tIFlFYzZXTEllaFdMYk5KM2ZpSm5y
-            Um03dERSUnlPL3N3TVBVSkQ1M3Z4VDAK7mu9X9JhXf2K4g+VQVg5nWR/uD12eW3D
-            tEekM3S7JCTpUIhX0FtF4k97DWU52uLdf1oL/vMS8kQkynSIsZRZAA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDeFgrbnVVNDVSMFpEY21E
+            anJWSlF3L3lVY2hBNklMaG9tcWNJUTlrWGx3CkdiM0EvU2tLMTBpTit6MFBLUHpX
+            SDNaRW5mRnJocXF5M29hb1kwM0ozbzQKLS0tIDVRblNZdyt6M0pjcElyR2d6bU12
+            OExmSzRnRHNFTE1MaTFGMnR0cmRYRzQKA42j8W2wjuuw+HvSET6z5kYgMf0zX42V
+            TiMHob898+7S2i28Wv3JTMhQWROsQdCfn+pXpR8I/dNdkv0RxnKNWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-09T03:36:32Z"
-    mac: ENC[AES256_GCM,data:UJmzoKQ+y33rGZ0yp6YlNJwtENmosOjHqi6w7479pPPBgttUXwvH3qqFQB0qXZuaiwhfvHpKvvWdUByHLGi5TeKfHUcwoW8HECwDwqtOB6NmZNQ0hGNRFNq2sr9cNbWx+skl8CpR6he3z5BUH+Wgk/zeja4g7rh/46/zrzug+tI=,iv:SEG819+ge0NUm2W072KYDnf8c5BTsuH0wbKmtRfXHzc=,tag:ER+f1wFqWesjzaeGdaj/VQ==,type:str]
+    lastmodified: "2021-12-09T06:22:43Z"
+    mac: ENC[AES256_GCM,data:is2A2JDFq3u4syBDunBkrSGnOCpZy6dB93nVWksh+zDzcU6O4I3Ax23tmqvVd55ORYmHov4IydnM0zTB6gx+YppmT1wYw9Y9USW+RWmdpAX1YeMRY3tV0B8Q92SPBgrK+MWs9cGX2opOEYoY0qitu8IeFE8zpWQx93Ad7aSs1K4=,iv:sGOtYD0iboPl2WEJYWgNTwPljRAcfeJxw6MCKm3dGck=,tag:qHzpqpAfls6Izrzqm0YIng==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
