--- a/provision/ansible/inventory/host_vars/k8s-0.sops.yml
+++ b/provision/ansible/inventory/host_vars/k8s-0.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:kvw4FFMHXnRY,iv:oDVu3bl6O84N7rKhvGbJXhs3MV41UKQIgxR18Da4gUI=,tag:5v0q6UX7Nia4zaUPdE0oSg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:kHkKH33l6tbHoA==,iv:++M4H/TmmZHYlXV1qWEXxcyDiLbOafpgjs47u5WJKCQ=,tag:YYxfzGGU/XAN5Kavqr3CFw==,type:str]
+ansible_user: ENC[AES256_GCM,data:mjTbYLie+wcD,iv:SudUoeembvqWDS5sKxwETHUf4gKs7Hda7U3rl1aR4mc=,tag:206364986URJA1OEoDG49Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:6GmD74XSo1PvMw==,iv:cJyp0UOkehcHRHI1X6QtQ+UscsJUakm9DAQ5+ayOi3E=,tag:PGCAiHt1+Y5OkHAFBGsPtA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1j9nkequ7a7k26n0gvj0j6pm4my9wehxxw8adfwq36yyf267fsffs57shza
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzNnpyWGtDdDRYeDdWdk5o
-            eWZmVGFROE52WHBwejNuWFMzWW5xbjhvTkhNCit6SmU5aXI1WkNvZGtUVDRuUGRj
-            aU5RWDFGMzdVVHB4M3UwbU5KeTBZSEUKLS0tIEJXclk2a0h6N2szM0R2Q2U2NG1i
-            QmNINWVIc2RML2tjQitBdTY4RlYzWmsKCcvwVVggNMhE5tIaRGIvs7PQir5jIquy
-            MJ1DL6AAcXQI3nu4TrfmoJI2G8YIK4ZWStgKEpibeBtArf0fSDcO3A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3aHduQVl1Wit0VXc1c3ZW
+            T1RLNlV2WmJNa0ZzSElWSXJKZ0VaelYxdkY0ClV1ejhDMnlQbUhaQWNFdHNlWVly
+            Y1BtREhGclcramdDOW9FZys2cEpHdGMKLS0tIDNuQ0RjcThQRkxseFJQaSt2dnJm
+            c3FZQWdXaG1VeUZyQW9KOG1CWEphUWcKiv8Tr14wgJW7yWjRCuDJ+VbdGRmKGjK/
+            l/GU0FFtOAhJg8gVUREMIAdQ1hFW7PXDA1610Q7C5u2/olSVmYj+nA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-09T03:36:32Z"
-    mac: ENC[AES256_GCM,data:pbOUcXI8cJXDiPpTgReIvU3o7j+bqCWOHeNEAYCom+F2oc+e5DmVmcnCT1JbuuW59QLk7jtqh1qlyGsYekvux02ec6HpiFU6P7zBs0WO6duok4/ZaUcSmkHzapTmn9xgBbzE7zLnpjEoWHeciHV8tPkQ6Rdl5umZWfwrNIb+mE0=,iv:rhAjylmchDUFkV70ScLOaaF3YB5cXf/v+Dxxq271ssI=,tag:R+9UjujW7JRIqUjuICATyw==,type:str]
+    lastmodified: "2021-12-09T06:22:43Z"
+    mac: ENC[AES256_GCM,data:KUv1hSoMLJf44pBiLYAvq3B+FTPgqQXJbJtFMElBaD1u6gbIkC1p3xaeNdX6y7M9sTwUZVyXaZVEqZw1dUEirgskHwKrxDT0e7BIkilV0eLJNdhRDlMwcHUH+LVNKVidYJMNB9g+Nfkz9KeNBRxc3JUdvd6bOEvR7H2BgPx+9Qk=,iv:tAux9zil8XKViBaRf3stfxNDRDh01TVF/nFP0TeBznA=,tag:EabvkgL3w4t0aTzZy8g6+g==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.1
