--- a/provision/ansible/inventory/host_vars/k8s-2.sops.yml
+++ b/provision/ansible/inventory/host_vars/k8s-2.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:mhe/1LWNMtWR,iv:3GamejF0Gh3UxMJE85/b3ilFzGs3IExEA7R3yV2F7Ng=,tag:xLEMJ/HmArXt0yX2BTHA/g==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:ulToREpy/4NnGA==,iv:dQC+aVRLolm5UkmxkA4R7QTy5tUoqID1HctfTvTijac=,tag:/rSAd5BFPg/B/hUuS1jc4g==,type:str]
+ansible_user: ENC[AES256_GCM,data:n3dTYfTx9ZrH,iv:4Yvj+xuRseD1NPsEpqj1MRzSvenPO45gS8vYFKyOK2s=,tag:8zIteH1Bvxm5zAckNGI4wA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:KHfQmRhBS2/ueA==,iv:E+C/Y4+53dtp/ChNEAKrhFUik56G8XxVegMxk2gHndY=,tag:F6Ej282gJTTeaUSLUaVbjA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1j9nkequ7a7k26n0gvj0j6pm4my9wehxxw8adfwq36yyf267fsffs57shza
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByOXFVNHBYUmQ3NlZYRGtN
-            S1JSQ0pkOUhqd09sOXF3ay93OW14N05NUTBBClpKczN5SUswdzRYV2lGUlNGUGRv
-            Mm1ORGJ5YWdQSnBTM1dtSGpKVjRPeDQKLS0tIEd1bmJNOUF2ZDZXR2p6YkE4amdn
-            WGdIVm0wT1MrcUxycW9qZWh6VExSOFUKsipHKWUqqmaHeYZY3J+I7MoIhpbZAH9U
-            o706A0yb2Y3NoiqpIBjs5vMyGzlDiIky4JWECo7DhUoSYLLoMEhlgA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIOVlPS21EUHNNU2xBNmx3
+            dUphZWpMLzljcUkvWkZiamZFOU1IVElZTkZVCmZHSlNKK0VmWWlvcWlZUzREdmZO
+            RnBaK1drREwwbExPbGo1aStrdU1OREUKLS0tIFN4MlVha2tkRURQTkE2YTYxQkV2
+            dmVCVnpveDhTYy82SUdac0FlRnlLekkKinbdf6LVw/pf6Px4T3EsaRuljXXV2VW0
+            UGne9xp4X8pKu4ScL52rzb1KELD/DmVX9Ot8N8RC9WvD66q/IchqMg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-09T03:36:32Z"
-    mac: ENC[AES256_GCM,data:U261tAdC4+9q18jxNSXH2xwAKbenn9a8X4Rug2Ur85weU/Paa29ghXEJKxqupoVMYZVbK9TOlVQliaQPu1Vp8mtUwfFc9+SCVjXoaO6sYWxmd/Ela5fvcCGarLAw/hTE5uLSnPsD91pIht2M0ny/7ADOLRBEvB7UTsqeJYWt6t8=,iv:M1uvW12iZU0VCBEpH67zGk3FkdnPCDl1Qxhlrbgy27I=,tag:ZNbIxm5D9ODVkhazFF/t9w==,type:str]
+    lastmodified: "2021-12-09T06:22:43Z"
+    mac: ENC[AES256_GCM,data:8dltu6b1jKimva2xPLVd265CbjIl8TFSnUjWa7c6bCXgayBuejypjQVW31PbQP1kTLXherXxiHFt4Zyiw7NlBWlO96utoUhFs8aIaT9iF1vbYG8UNN2nnS0zumjVgzJLi54rO4wtNkMZorK29Q+6o4CFs+Dgmz0a+YgcP6cmuvM=,iv:bQmyZvvUDBbcLKTtNbOzeTYYH1z+3YpZwTpJCIUWRYc=,tag:Pv5s9bvHbZ17PvyhgfyMLw==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.1
