--- a/provision/ansible/inventory/host_vars/k8s-3.sops.yml
+++ b/provision/ansible/inventory/host_vars/k8s-3.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:dUPjVXcV2wD6,iv:rD1GULYwqQULr+VrmvlTflVKI3C0LMR/7qdCE4uZrQ0=,tag:BsIYv9aXH3jgkN5DHYbqdw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:2T5oYTkEeU4bJw==,iv:I6EnkGUTRF3+iuvEVkGhZiAUWQcVdPedKxMFDgdHzs4=,tag:mVKKrcZLStTnBeGIJ27ATg==,type:str]
+ansible_user: ENC[AES256_GCM,data:xX2iaSDsHJRR,iv:QuIK/Z6JEX1kY6Fs6esQ3Y86x/HlD78n5vcq3u8oJ24=,tag:FGz6DdyGQbYBc9s7LNpj+g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:gGy1brYiN6SOfw==,iv:W1ESkxqlVwC0f3rvIKOTMWxmhMYZfvQVRjZawgHIaR0=,tag:W1CA7jpOydcPsqDCooimcQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1j9nkequ7a7k26n0gvj0j6pm4my9wehxxw8adfwq36yyf267fsffs57shza
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBubFNFbXJ3M2k0RU5ZOS93
-            NUFJNWV6KzZ3UnE4azFlMDN3eUUrbmlmK1RjCitMQVEwQ3NmUE9YOEduUVdaNndq
-            V3VNTEczOWFydWhsMEY3S1g0ZVpjY00KLS0tIFdJcXFpM29CTkQ0aXAzWGw2cnZT
-            TGhpOCtmVzJDT0hHb05uR0FKK2JBZjgK9cR6vxDV5W1cFjV5O2cyVzvAjlYwfyLH
-            YNkUyBMWTZrqxh0OL7WUeiNbGtlJE88o+rU0GhwZSP1vv1+nSh+zYw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCZmZKR1RSZUVCMk5vZHo4
+            bFBzd3h4di9HVml5QXpZaTZCQ3RMOUdyUFRrCmh6bFJGeCttQ0g5ZDVZYkpZRDNX
+            OVl6NGhiemROalUwc2VjK0I2RjFLb2sKLS0tIHc1OTdweitpL3J5bDJUR0ZKMUVW
+            YnU5NHAyL242T2lwTmY2Q2FVQllyTGsK780UTGWgPpVtXGu1sCkEScizC727Xasz
+            v0ShE0A3Clv+xbzJawFzTq2TeLkpMqE2cRW4Xs1v+O+tWA3DAkherQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-09T03:36:32Z"
-    mac: ENC[AES256_GCM,data:pX4j2ZDfAwVfVpg2Xghr1JcSRcVOJd+iE7xExfhiqfXU50UBrXyBDfJyfDOc7WiFob4rDGfXjYOpmxmchEuu/d7ody2Ayz80g+ArIuJf1/TE1SokJsGESMzRt2f9jjEh8IukDv2xpN0ilc2f0nNYW/dXdi1GliOgXBJJ4Ek3BRU=,iv:pVW7v6mSuQ1GcE/5uIDQsxH8dnGbGgq6AoG4LcgzQq4=,tag:4loUoFEBLuF31Ozo0al8lA==,type:str]
+    lastmodified: "2021-12-09T06:22:43Z"
+    mac: ENC[AES256_GCM,data:lSoSdUNVnTUjAdGcGoUniyaMSUDfkm5shtxoCz6m+zbyCBo4a0fFs/v0PPVa+HlMrLJY0XFrqHKS+WmnZluIUl5/BHB+8F0mCoL2mszULffAmz8kP90PLNGXebztqcqZone9zmU9g+dnBH12bKLEh2DIFUA/Nhs3kQQ5KuQrljs=,iv:yFFGYWkDUCZNCkOTYtiAqSaDdGqrCj0bzPKb9+3SKsw=,tag:HfVRBGVK+4ihWEbkZmvV5Q==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.1
