--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -26,11 +26,7 @@ spec:
         matchNames:
           - default
           - networking
-      name: "you"
-      customApps:
-        - name: Some External Cluster Service
-          url: http://192.168.1.100:5000
-          icon: test-tube
+      name: "Craighton"
       groups:
         - name: Communicate
           links:
