remove rancher ingress

--- a/cluster/apps/cattle-system/rancher/helm-release.yaml
+++ b/cluster/apps/cattle-system/rancher/helm-release.yaml
@@ -16,6 +16,7 @@ spec:
   interval: 15m0s
   values:
     ingress:
-      tls:
-        source: letsEncrypt
-    hostname: rancher.${SECRET_DOMAIN}
+      enabled: false
+    #   tls:
+    #     source: letsEncrypt
+    # hostname: rancher.${SECRET_DOMAIN}
