add namespace selector

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -26,6 +26,7 @@ spec:
         matchNames:
           - default
           - networking
+          - cattle-system
       name: "Craighton"
       groups:
         - name: Communicate
