chore(deps): update renovate annotations

--- a/cluster/apps/cattle-system/rancher/helm-release.yaml
+++ b/cluster/apps/cattle-system/rancher/helm-release.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   chart:
     spec:
+      # renovate: registryUrl=https://releases.rancher.com/server-charts/stable
       chart: rancher
       version: 2.6.2
       sourceRef:
