--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -21,8 +21,7 @@ metadata:
 spec:
   type: ExternalName
   ports:
-    - name: nas
-      port: 443
+    - name: web
       targetPort: 5001
   externalName: 192.168.1.20
 ---
@@ -45,6 +44,6 @@ spec:
     services:
     - kind: Service
       name: nas
-      port: 5001
+      port: web
   tls:
     nas-tls
