--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -8,7 +8,6 @@ spec:
   type: ExternalName
   ports:
     - name: web
-      port: 443
       targetPort: 5001
   externalName: 192.168.1.20
 ---
@@ -32,8 +31,9 @@ spec:
     services:
     - kind: Service
       name: nas
-      namespace: networking
       port: web
       scheme: https
   tls:
-    nas-tls
+    - hosts:
+        - "nas.${SECRET_DOMAIN}"
+      secretName: "nas-tls"
