--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -32,7 +32,7 @@ spec:
     services:
     - kind: Service
       name: nas
-      port: web
+      port: 5001
       scheme: https
   tls:
     secretName: "nas-tls"
