--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -35,8 +35,4 @@ spec:
       port: 5001
       scheme: https
   tls:
-    secretName: "nas-tls"
-    domains:
-      - main: ${SECRET_DOMAIN}
-        sans:
-          - nas.${SECRET_DOMAIN}
+    certResolver: letsencrypt-production
