--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -2,39 +2,36 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: google-external  
+  name: nas
   namespace: networking
 spec:
   type: ExternalName
   ports:
   - name: https    
     port: 443    
-    targetPort: 80
-  externalName: google.com
+    targetPort: 5001
+  externalName: 192.168.1.20
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: google-ingress 
+  name: nas 
   namespace: networking 
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     kubernetes.io/ingress.class: traefik 
     traefik.frontend.passHostHeader: "false"
-    traefik.ingress.kubernetes.io/redirect-regex: ^https://nas.${SECRET_DOMAIN}/(.*)
-    traefik.ingress.kubernetes.io/redirect-replacement: https://nas.${SECRET_DOMAIN}/$1
-    traefik.ingress.kubernetes.io/redirect-permanent: "false"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:    
   tls:
     - hosts:
         - "nas.${SECRET_DOMAIN}"
-      secretName: "google-ingress-tls"
+      secretName: "nas-tls"
   rules:
     - host: nas.${SECRET_DOMAIN}
       http:
         paths:
         - path: /
           backend:
-            serviceName: google-external
+            serviceName: nas
             servicePort: https
