add hajimari to nas

--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -22,6 +22,8 @@ metadata:
     kubernetes.io/ingress.class: traefik 
     traefik.frontend.passHostHeader: "false"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    hajimari.io/enable: "true"
+    hajimari.io/icon: "nas"
 spec:    
   tls:
     - hosts:
