--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -20,6 +20,7 @@ spec:
     image:
       repository: ghcr.io/toboshii/hajimari
       tag: v0.2.0
+    replicas: 0
     hajimari:
       defaultEnable: false
       namespaceSelector:
