--- a/cluster/core/csi/synology/client-info-secret.sops.yaml
+++ b/cluster/core/csi/synology/client-info-secret.sops.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-data:
+stringData:
     client-info.yml: ENC[AES256_GCM,data:PGhGoQ8ceHpKyAs5Rs35YsfDPvkF13sak2Wmcv4qKuTFbQj1X/fyzzs5sK1eNZz0Zr1UFRclOIQ4frTbGhvzxjsd5C+k5b43GP+3E23JZ0quuSo1fw2z+reozTd3ceuiaRv+admqyqCLxsTZStOlMxY=,iv:ko4TBwNC0zINoDMTACJ/nS0hv5DDALBfaZFMCK5x12g=,tag:wYRXRnF3eYsuyXbbnqmfTA==,type:str]
 kind: Secret
 metadata:
