update sops secret

--- a/cluster/core/csi/synology/client-info-secret.sops.yaml
+++ b/cluster/core/csi/synology/client-info-secret.sops.yaml
@@ -1,11 +1,11 @@
+# yamllint disable
 apiVersion: v1
-stringData:
-    client-info.yml: ENC[AES256_GCM,data:PGhGoQ8ceHpKyAs5Rs35YsfDPvkF13sak2Wmcv4qKuTFbQj1X/fyzzs5sK1eNZz0Zr1UFRclOIQ4frTbGhvzxjsd5C+k5b43GP+3E23JZ0quuSo1fw2z+reozTd3ceuiaRv+admqyqCLxsTZStOlMxY=,iv:ko4TBwNC0zINoDMTACJ/nS0hv5DDALBfaZFMCK5x12g=,tag:wYRXRnF3eYsuyXbbnqmfTA==,type:str]
 kind: Secret
 metadata:
     name: client-info-secret
     namespace: synology-csi
-type: Opaque
+stringData:
+    client-info.yaml: ENC[AES256_GCM,data:1qIjQG8LeruZMzypjR7vYF7ZBoilGl4qJFVLf7ywFBQKood5rr06/YeWnC4N+k9GLaJtYrJYRYWhNkmCqBl23tH8wCFsMmOuYHOP8Zr6G4l4FmPmTVfnvJPvQ70Q+h5bTD2WEtqyiO88FmFzThmQC1ViPW/eVjfmeR45,iv:HhwsLC1NiY9epde6+7lUeG9JmBEGMRRzSTpHWBhd1VM=,tag:db9sKMfS0W0JxFfApdoK0g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1j9nkequ7a7k26n0gvj0j6pm4my9wehxxw8adfwq36yyf267fsffs57shza
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpRmg2Q3RERFl6Mlo2REFC
-            SktNeWx0eHZIcVNmTkh2dnVQYkdrcmpuc0Q0Cm5xd0RwbjgyYUVBZUtrTlRsd253
-            RW56ZlFtWWp5WWpRYm1GeGpieG0zS1EKLS0tIEl3c1BGTVNJdzFMcXExbXlTeHZL
-            NlJGcTUxMExVckpubjRrUlFVb2JxZFUKigCctu4vy48I9vXy9n4t3YBQ/d/ipYg6
-            zLvU6AgDsRzgUymN8kftgDJDV9W2Gxg/pQqqdB0lN/ZQk7VTSuoOhg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWK3g4MFFPNDg4bTE4ak5z
+            eVhOVlJQYU1VNmVBcnZ0SHBsS3Zqc3pSaVhVCkQvK0dBLzJNQUM3ZE1ZckhQL0VI
+            aGRPNGR6T1lUWU0yS1Y3Z05kVTl0WncKLS0tIHVMYTBGVWVmWlExUzdYMUI2czlN
+            SG5pU2JCZVMvUWtsdFpHSXlWZjQ1MjQKI9LIUUcGfCjIbapWPYKSvawM+6mKOEqI
+            Z9fElhpkxDGHav5IZj6huxLF27mQHg5X+A5CWZNycRw4aNogZ/K8Ew==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-11T05:15:01Z"
-    mac: ENC[AES256_GCM,data:Yjn7tQrVbesWk0JV38n+es2M2/AR9BlNGbWM8cYbi8qGD8FveyruBVp8G7OJCmkzKgVlqd/quWmM677ShHzg/vt8H4cYnbePOxE/LANZfPUgTZPpwWeJFRhAHNaEm4jdeMg1Gt0/HGq6gnajAtpCXDVRhtX2R/fHxC3x+mILiSY=,iv:s8U0p2KRozYBENPBPT25iZDESEQoybzSvLmybdwdza0=,tag:x4cKMMPcphdivouwK5SQ3A==,type:str]
+    lastmodified: "2021-12-11T05:41:27Z"
+    mac: ENC[AES256_GCM,data:cZAus2Z6PmwOvFgYNzy+gTDLsHTX2P4W/jDR1rEtPVbb8VOc4jz1yl21KT9nByWhtedzloNhbxHnbDnP2kvFEjWx0Rc3z9UgkSkCdsxH+WQu392QT6S1MtyWrgg36X5nBISHLz50JDznrjpSutextmJlxcfmsZDKsAvGuPCyUcQ=,iv:lCmOcu3iIYqa/GR8+b/YGqTHvGoVwGg8JPuyyLSNdug=,tag:nzE7YLg4/CtZlzdde0GOiA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
