--- a/cluster/apps/home/home-assistant/kustomization.yaml
+++ b/cluster/apps/home/home-assistant/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - frigate
-  - home-assistant
+  - storage.yaml
+#  - helm-release.yaml  
