--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -17,7 +17,7 @@ spec:
         namespace: flux-system
       interval: 5m
   dependsOn:
-    - name: home-assistant-config-pvc
+    - namespace: home
   values:
     image:
       repository: ghcr.io/home-assistant/home-assistant
