--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -31,6 +31,8 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           external-dns/is-public: "true"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
           - host: "ha.${SECRET_DOMAIN}"
             paths:
@@ -39,6 +41,7 @@ spec:
         tls:
           - hosts:
               - "ha.${SECRET_DOMAIN}"
+            secretName: "home-assistant-tls"
     persistence:
       config:
         enabled: true
