--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -27,20 +27,21 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: "traefik"
+        # ingressClassName: "traefik"
         annotations:
+          kubernetes.io/ingress.class: traefik 
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           external-dns/is-public: "true"
           cert-manager.io/cluster-issuer: "letsencrypt-production"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
-          - host: "ha.${SECRET_DOMAIN}"
+          - host: "home.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - "ha.${SECRET_DOMAIN}"
+              - "home.${SECRET_DOMAIN}"
             secretName: "home-assistant-tls"
     persistence:
       config:
@@ -69,6 +70,7 @@ spec:
           enabled: true
           ingressClassName: "traefik"
           annotations:
+            kubernetes.io/ingress.class: traefik 
             external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
             external-dns/is-public: "true"
             cert-manager.io/cluster-issuer: "letsencrypt-production"
