--- a/cluster/apps/home/mqtt/kustomization.yaml
+++ b/cluster/apps/home/mqtt/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - frigate
-  - mqtt
-  - home-assistant
+  - storage.yaml
+  - helm-release.yaml
