--- a/cluster/apps/home/mqtt/storage.yaml
+++ b/cluster/apps/home/mqtt/storage.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mosquitto-config-pv
-  namespace: home-assistant
+  namespace: home
 spec:
   capacity:
     storage: 50Gi
@@ -19,7 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mosquitto-config-pvc
-  namespace: home-assistant
+  namespace: home
 spec:
   storageClassName: nfs
   accessModes:
