--- a/cluster/apps/cattle-system/rancher/helm-release.yaml
+++ b/cluster/apps/cattle-system/rancher/helm-release.yaml
@@ -16,6 +16,7 @@ spec:
         namespace: flux-system
   interval: 15m0s
   values:
+    replicas: 1
     ingress:
       enabled: false
     #   tls:
