add frigate config pvc

--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
 
     persistence:
       data:
-        enabled: true
+        enabled: false
         mountPath: /data
         existingClaim: frigate-config-pvc
       media:
