--- a/cluster/apps/home/frigate/storage.yaml
+++ b/cluster/apps/home/frigate/storage.yaml
@@ -27,3 +27,33 @@ spec:
   resources:
     requests:
       storage: 1Ti
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: frigate-config-pv
+  namespace: home-assistant
+spec:
+  capacity:
+    storage: 10Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs
+  nfs:
+    path: /volume10/nvr
+    server: 192.168.1.20
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: frigate-config-pvc
+  namespace: home-assistant
+spec:
+  storageClassName: nfs
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 10Gi
