--- a/cluster/apps/home/frigate/storage.yaml
+++ b/cluster/apps/home/frigate/storage.yaml
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: frigate-config-pv
-  namespace: home-assistant
+  namespace: home
 spec:
   capacity:
     storage: 10Gi
@@ -49,7 +49,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: frigate-config-pvc
-  namespace: home-assistant
+  namespace: home
 spec:
   storageClassName: nfs
   accessModes:
