change esphome replicaCount

--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
     image:
       tag: 2021.8.0
       pullPolicy: IfNotPresent
-    replicas: 0
+    replicaCount: 0
     dnsPolicy: ClusterFirstWithHostNet
     hostNetwork: true
     persistence:
