--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -7,3 +7,4 @@ metadata:
 data:
   METALLB_LB_RANGE: 192.168.1.150-192.168.1.170
   METALLB_TRAEFIK_ADDR: 192.168.1.150
+  NAS_ADDRESS: 192.168.1.20
