--- a/cluster/apps/home/mqtt/storage.yaml
+++ b/cluster/apps/home/mqtt/storage.yaml
@@ -13,7 +13,7 @@ spec:
   storageClassName: nfs
   nfs:
     path: /volume9/mqtt
-    server: 192.168.1.20
+    server: ${NAS_ADDRESS}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
