--- a/cluster/apps/kube-system/nfs-subdir-external-provider/helm-release.yaml
+++ b/cluster/apps/kube-system/nfs-subdir-external-provider/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
   values:
     replicaCount: 1
     nfs:
-      server: "192.168.1.20"
+      server: "${NAS_ADDRESS}"
     storageClass:
       defaultClass: true
       pathPattern: "${.PVC.namespace}-${.PVC.name}"
