--- a/cluster/core/csi/synology/storage-class.yaml
+++ b/cluster/core/csi/synology/storage-class.yaml
@@ -6,7 +6,7 @@ metadata:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: csi.san.synology.com
 parameters:
-  dsm: '192.168.1.20'
+  dsm: '${NAS_ADDRESS}'
   location: '/volume12'
   fsType: 'btrfs'
 reclaimPolicy: Retain
