--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -10,7 +10,7 @@ spec:
   - name: https    
     port: 443    
     targetPort: 5001
-  externalName: ${NAS_ADDRESS}
+  externalName: "${NAS_ADDRESS}"
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
