--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
       repository: blakeblackshear/frigate
       tag: 0.9.4-amd64
       pullPolicy: IfNotPresent
-    replicas: 1
+    replicaCount: 0
     strategy:
       type: Recreate
     
