add autoreloading to frigate

--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -24,6 +24,8 @@ spec:
     replicaCount: 0
     strategy:
       type: Recreate
+    podAnnotations:
+      reloader.stakater.com/auto: "true"
     
     env: 
       TZ: "America/Denver"
