--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -9,6 +9,7 @@ stringData:
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:mvtv1w6hVVBFpxaREvZWox7ZKk0sqlrfm5c=,iv:mWbHigvWhADo1CijCtiQ9Uahq+rpTTO3yZr4VIOP1h4=,tag:aRu/K6YtySX4OUWeSQVzag==,type:str]
     SECRET_CAMERA_CONNECTION_GARAGE: ENC[AES256_GCM,data:Rsrz2aMOhMRKcfcDBjMiD+4lcSRiayMyb7RyAZWGSP4Z3vLWHiSJvJAWddxcKPi1,iv:hPIBXvg/irjgRGnbwK8VczTVbONyDV1JD8bsSgHPkTs=,tag:gCemfMnnlu/WJfOsI+qgjg==,type:str]
     SECRET_CAMERA_CONNECTION_DECLANROOM: ENC[AES256_GCM,data:p9G0hL/g63GlOKLmLjXRhfd7gGUCzuPKe0eWV2AOYICP7bbVJ6m5oGEa2HYt4bg=,iv:CzB6O3ALvuitBSqTlCpkNxrPIIKFrGZLaKxuNkl/WzM=,tag:aq6h+rMQlDg0uMHOg7q1KA==,type:str]
+    SECRET_PLEX_CLAIM: ENC[AES256_GCM,data:/zuCrOwRR0i0sQjFpFElHwdlvXO3F35VNeM=,iv:4/ief35zBV+VAlWYMHXAAbyYAFVbnjYI3ECxnLAcatk=,tag:P3++T9TypesmPOwchTLSnw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +25,8 @@ sops:
             OExmSzRnRHNFTE1MaTFGMnR0cmRYRzQKA42j8W2wjuuw+HvSET6z5kYgMf0zX42V
             TiMHob898+7S2i28Wv3JTMhQWROsQdCfn+pXpR8I/dNdkv0RxnKNWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-12T01:35:52Z"
-    mac: ENC[AES256_GCM,data:cyB92RC2Ph8Z2kuRgBIqYR64QWugTv7/iYKIShN+l4RoV/cOT7s4R0DQJt0aUZ88VuF62+EV42j7ZnDNhKSdWwtXojN3t9t1hKsBP64wEwVDxVqrMKUm7BWPL7xOJgHHU2lLO1pSKo4XK50HJqdCi5XAcn5f3bMGEzNjpZRFbmc=,iv:tI73tPuKHrxOvhkAFwZVSAXsXSH2C69p2cKSrFuWH2E=,tag:mxlzNQvUd6Rh8GMAF6dMFQ==,type:str]
+    lastmodified: "2021-12-12T22:41:41Z"
+    mac: ENC[AES256_GCM,data:nGVoiW1obX35nFB7xrh1p5ooosvjF9RtfcjHZKnQ08ytC3rlzLfkpWqLo/mIUvZHIQ2DAQI4iaXslg6oK9bcDTzfRpIjgXPIFHaYmXcvq/O8ylCO6/WUATEVWzFUVIdKAWayM95JBf1hKQPVdeyuaAEEfoRFxoFFKbLFqYHExH8=,iv:RgKnwVxVxWtqBTcdcBbNK8wybiQq7EmU/JUMronZMo0=,tag:NXVPxNuy9x3bm8pE+ktWUg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
