--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -41,6 +41,9 @@ spec:
           external-dns/is-public: "true"
           cert-manager.io/cluster-issuer: "letsencrypt-production"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          hajimari.io/appName: "Plex"
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "plex"
         hosts:
           - host: plex.${SECRET_DOMAIN}
             paths:
