add namespace to hajimari

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -28,6 +28,7 @@ spec:
           - default
           - networking
           - cattle-system
+          - media
       name: "Craighton"
       groups:
         - name: Communicate
