add default gateway

--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -9,3 +9,4 @@ data:
   METALLB_TRAEFIK_ADDR: 192.168.1.150
   NAS_ADDRESS: 192.168.1.20
   SVC_BLOCKY_ADDR: 192.168.1.155
+  DEFAULT_GATEWAY: 192.168.1.1
