--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -10,3 +10,4 @@ data:
   NAS_ADDRESS: 192.168.1.20
   SVC_BLOCKY_ADDR: 192.168.1.155
   DEFAULT_GATEWAY: 192.168.1.1
+  LOCAL_UPSTREAM_DNS_1: 192.168.1.56
