--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,10 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - default
+  # - default
   - kube-system
   - networking
   - system-upgrade
-  - cattle-system
+  # - cattle-system
   - home
   - media
