--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -11,3 +11,4 @@ data:
   SVC_BLOCKY_ADDR: 192.168.1.151
   DEFAULT_GATEWAY: 192.168.1.1
   LOCAL_UPSTREAM_DNS_1: 192.168.1.56
+  GAME_SERVER_IP: 192.168.1.152
