update fatorio storage

--- a/cluster/apps/games/factorio/storage.yaml
+++ b/cluster/apps/games/factorio/storage.yaml
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: factorio-pvc-1
+  name: factorio-pvc
   namespace: games
 spec:
   storageClassName: nfs
