--- a/cluster/apps/games/factorio/deployment.yaml
+++ b/cluster/apps/games/factorio/deployment.yaml
@@ -31,3 +31,12 @@ spec:
         - name: factorio-vol
           persistentVolumeClaim:
             claimName: factorio-pvc
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/arch
+                operator: In
+                values:
+                - amd64
