--- a/cluster/apps/games/factorio/deployment.yaml
+++ b/cluster/apps/games/factorio/deployment.yaml
@@ -28,7 +28,8 @@ spec:
             - mountPath: /factorio
               name: factorio-vol
           env:
-            - name: SAVE_NAME=WithDad2021
+            - name: SAVE_NAME
+              value: WithDad2021
       volumes:
         - name: factorio-vol
           persistentVolumeClaim:
